--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-*.gem
-.bundle
-.jekyll-cache
-.sass-cache
 _site
-Gemfile.lock
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
 vendor
+.bundle/
+*.gem
