--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,24 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Landed by HTML5UP
+copyright: Untitled
+email: franz@franzscholz.net
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A Jekyll template for the HTML5UP Landed design.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: franzscholz
+github_username:  franzscholz
+facebook_username: franzscholz
+linkedin_username: franzscholz
+instagram_username: franzscholz
+xing_username: Franz_Scholz
 
 # Build settings
 # theme: jekyll-theme-html5up landed
-#plugins:
-#  - jekyll-feed
+plugins:
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -53,3 +56,9 @@ github_username:  jekyll
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+exclude:
+  - "*.gem"
+  - "*.gemspec"
+  - LICENSE.txt
+  - README.md
